tests/ui/wf/issue-87495.stderr
error[E0038]: the trait `T` is not dyn compatible
  --> $DIR/issue-87495.rs:4:25
   |
LL |     const CONST: (bool, dyn T);
   |                         ^^^^^ `T` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/issue-87495.rs:4:11
   |
LL | trait T {
   |       - this trait is not dyn compatible...
LL |     const CONST: (bool, dyn T);
   |           ^^^^^ ...because it contains this associated `const`
   = help: consider moving `CONST` to another trait

error[E0277]: the size for values of type `(dyn T + 'static)` cannot be known at compilation time
  --> $DIR/issue-87495.rs:4:5
   |
LL |     const CONST: (bool, dyn T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `(dyn T + 'static)`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0038, E0277.
For more information about an error, try `rustc --explain E0038`.
